[workspace]
resolver = "2"
members = [
    "secrets",
    "secrets-memory",
    "secrets-keyring",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
publish = true

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.dependencies]
block-os-secrets = { path = "secrets", version = "0.1.0" }

async-trait = "0.1"
thiserror = "1"
zeroize = { version = "1", features = ["zeroize_derive"] }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
anyhow = "1"
