[package]
name = "rubix-secrets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "secrets"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
anyhow = { workspace = true }
